--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
           <h1 class="mb-0">Andrea
             <span class="text-primary">Mannocci</span>
           </h1>
-          <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
-            <a href="mailto:name@email.com">name@email.com</a>
+          <div class="subheading mb-5">Knowledge Media Institute, The Open University, Walton Hall, Kents Hill, Milton Keynes MK7 6AA
+            <a>andrea.mannocci _at_ open _ dot_ ac _dot_ uk</a>
           </div>
           <p class="mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
           <ul class="list-inline list-social-icons mb-0">
