--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <span class="text-primary">Mannocci</span>
           </h1>
           <div class="subheading mb-5">Knowledge Media Institute, The Open University, Walton Hall, Kents Hill, Milton Keynes MK7 6AA
-            <br/><a href="mailto://andrea.mannocci@open.ac.uk">andrea.mannocci@open.ac.uk</a>
+            <br/><a href="mailto:andrea.mannocci@open.ac.uk">andrea.mannocci@open.ac.uk</a>
           </div>
           <p class="mb-5"><i class="fa-li fa fa-spinner"></i> Loading... :)</p>
           <ul class="list-inline list-social-icons mb-0">
