--- a/index.html
+++ b/index.html
@@ -68,10 +68,11 @@
           <h1 class="mb-0">Andrea
             <span class="text-primary">Mannocci</span>
           </h1>
-          <div class="subheading mb-5">Knowledge Media Institute, The Open University, Walton Hall, Kents Hill, Milton Keynes MK7 6AA
+          <div class="subheading mb-5">Knowledge Media Institute, The Open University, Walton Hall, Kents Hill,  MK7 6AA Milton Keynes, UK
             <br/><a href="mailto:andrea.mannocci@open.ac.uk">andrea.mannocci@open.ac.uk</a>
           </div>
           <p class="mb-5"><i class="fa-li fa fa-spinner"></i> Loading... :)</p>
+          <p class="mb-5"><i class="fa-li fa fa-spinner"></i> The full CV can be found <a href="">here</a></p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://www.facebook.com/andremann">
@@ -281,11 +282,20 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="awards">
         <div class="my-auto">
-          <h2 class="mb-5">Awards &amp; Certifications</h2>
+          <h2 class="mb-5">Awards, Scholarships &amp; Certifications</h2>
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fa fa-trophy text-warning"></i>
-              Best Paper Award at The Web Conference 2018 (SAVE-SD workshop)</li>
+              Best Paper Award at The Web Conference 2018 (SAVE-SD workshop)
+            </li>
+            <li>
+              <i class="fa-li fa fa-graduation-cap text-normal"></i>
+              GYM: Grants for Young Mobility (ISTI-CNR), 2016
+            </li>
+            <li>
+              <i class="fa-li fa fa-graduation-cap text-normal"></i>
+              Early Career Scientists programme (Research Data Alliance, RDA), 2014
+            </li>
           </ul>
         </div>
       </section>
