--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <!-- Custom fonts for this template -->
     <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:100,200,300,400,500,600,700,800,900" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800,800i" rel="stylesheet">
-    <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+    <!-- <link href="vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet"> -->
+    <link href="vendor/font-awesome/css/fontawesome-all.css" rel="stylesheet">
     <link href="vendor/devicons/css/devicons.min.css" rel="stylesheet">
     <link href="vendor/simple-line-icons/css/simple-line-icons.css" rel="stylesheet">
 
@@ -72,13 +73,13 @@
             <br/><a href="mailto:andrea.mannocci@open.ac.uk">andrea.mannocci@open.ac.uk</a>
           </div>
           <p class="mb-5"><i class="fa-li fa fa-spinner"></i> Loading... :)</p>
-          <p class="mb-5"><i class="fa-li fa fa-spinner"></i> The full CV can be found <a href="">here</a></p>
+          <p class="mb-5"><i class="fa-li fa fa-spinner"></i> The full CV can be found <a href="https://drive.google.com/file/d/1SzMqRhUQwX7Mvd4ab0xTPIw4EqPbXpiM/view?usp=sharing">here</a></p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://www.facebook.com/andremann">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
+                  <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
                 </span>
               </a>
             </li>
@@ -86,7 +87,7 @@
               <a href="https://twitter.com/andremanno">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
+                  <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
                 </span>
               </a>
             </li>
@@ -94,7 +95,7 @@
               <a href="https://www.linkedin.com/in/andrea-mannocci">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-linkedin fa-stack-1x fa-inverse"></i>
+                  <i class="fab fa-linkedin-in fa-stack-1x fa-inverse"></i>
                 </span>
               </a>
             </li>
@@ -102,7 +103,7 @@
               <a href="https://github.com/andremann">
                 <span class="fa-stack fa-lg">
                   <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-github fa-stack-1x fa-inverse"></i>
+                  <i class="fab fa-github fa-stack-1x fa-inverse"></i>
                 </span>
               </a>
             </li>
@@ -258,16 +259,16 @@
           <div class="subheading mb-3">Workflow</div>
           <ul class="fa-ul mb-0">
             <li>
-              <i class="fa-li fa fa-check"></i>
+              <i class="fa-li fas fa-check"></i>
               Mobile-First, Responsive Design</li>
             <li>
-              <i class="fa-li fa fa-check"></i>
+              <i class="fa-li fas fa-check"></i>
               Cross Browser Testing &amp; Debugging</li>
             <li>
-              <i class="fa-li fa fa-check"></i>
+              <i class="fa-li fas fa-check"></i>
               Cross Functional Teams</li>
             <li>
-              <i class="fa-li fa fa-check"></i>
+              <i class="fa-li fas fa-check"></i>
               Agile Development &amp; Scrum</li>
           </ul>
         </div>
@@ -285,15 +286,15 @@
           <h2 class="mb-5">Awards, Scholarships &amp; Certifications</h2>
           <ul class="fa-ul mb-0">
             <li>
-              <i class="fa-li fa fa-trophy text-warning"></i>
+              <i class="fa-li fas fa-trophy text-warning"></i>
               Best Paper Award at The Web Conference 2018 (SAVE-SD workshop)
             </li>
             <li>
-              <i class="fa-li fa fa-graduation-cap text-normal"></i>
+              <i class="fa-li fas fa-graduation-cap text-normal"></i>
               GYM: Grants for Young Mobility (ISTI-CNR), 2016
             </li>
             <li>
-              <i class="fa-li fa fa-graduation-cap text-normal"></i>
+              <i class="fa-li fas fa-graduation-cap text-normal"></i>
               Early Career Scientists programme (Research Data Alliance, RDA), 2014
             </li>
           </ul>
