added some skills from CV

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <br/><a href="mailto:andrea.mannocci@open.ac.uk">andrea.mannocci@open.ac.uk</a>
           </div>
           <p class="mb-5"><i class="fa-li fa fa-spinner"></i> Loading... :)</p>
-          <p class="mb-5"><i class="fa-li fa fa-spinner"></i> The full CV can be found <a href="https://drive.google.com/file/d/1SzMqRhUQwX7Mvd4ab0xTPIw4EqPbXpiM/view?usp=sharing">here</a></p>
+          <p class="mb-5"><i class="fa-li fa fa-spinner"></i> The full CV can be found <a target="_blank" href="https://drive.google.com/file/d/1SzMqRhUQwX7Mvd4ab0xTPIw4EqPbXpiM/view?usp=sharing">here</a></p>
           <ul class="list-inline list-social-icons mb-0">
             <li class="list-inline-item">
               <a href="https://www.facebook.com/andremann">
@@ -222,6 +222,15 @@
           <div class="subheading mb-3">Programming Languages &amp; Tools</div>
           <ul class="list-inline list-icons">
             <li class="list-inline-item">
+              <i class="devicons devicons-python"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicons devicons-java"></i>
+            </li>
+            <li class="list-inline-item">
+              <i class="devicons devicons-database"></i>
+            </li>
+            <li class="list-inline-item">
               <i class="devicons devicons-html5"></i>
             </li>
             <li class="list-inline-item">
@@ -231,32 +240,35 @@
               <i class="devicons devicons-javascript"></i>
             </li>
             <li class="list-inline-item">
+                <i class="devicons devicons-bootstrap"></i>
+              </li>
+            <li class="list-inline-item">
               <i class="devicons devicons-jquery"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-sass"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-less"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-bootstrap"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-wordpress"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-grunt"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-gulp"></i>
-            </li>
-            <li class="list-inline-item">
-              <i class="devicons devicons-npm"></i>
             </li>
           </ul>
 
-          <div class="subheading mb-3">Workflow</div>
+          <div>
+              <strong>Programming skills:</strong> Java, Python, JavaScript, C/C++, Bash scripting. Proficiency with
+              Apache Maven and VCSs (SVN &amp; GIT). Advanced knowledge of VS code, IntelliJ, Eclipse,
+              NetBeans IDEs. <strong>Data science tools:</strong> Python notebook, pandas, pyplot, plotly, scikit-learn,
+              &amp; platforms: proficiency with Spring framework (Core, MVC, Security), JPA and Hibernate. 
+              <strong>Web development &amp; JS frameworks:</strong> JQuery, Boot-
+              strap, AngularJS, CSS, Django, JSP. 
+              <strong>Application monitoring:</strong> ELK stack (Logstash, Elas-
+              ticSearch, Kibana), Prometheus. 
+              <strong>Markup languages:</strong> HTML, XHTML, XML (XML Schema, XPath, XQuery, XSL), LaTeX. 
+              <strong>Metadata formats:</strong> XML, DublinCore, EpiDoc, RDF. 
+              <strong>Web services and web applications:</strong> SOAP, WSDL, WADL, JAX-WS, REST, JAX-RS, Apache
+              CXF, Jersey, Apache HTTP server and Apache Tomcat, Jetty, ServiceMix, OSGi; 
+              <strong>Data management systems:</strong> proficiency with both SQL and noSQL paradigms (transactional
+              and non-transactional approaches); configuration and optimisation of databases; 
+              <strong>relational databases:</strong> PosgreSQL, MySQL, SQLite; <strong>noSQL databases:</strong> eXist, MongoDB, HBase;
+              <strong>k-v stores:</strong> Redis, Voldemort, EhCache; <strong>time series databases:</strong> InfluxDB, Druid; 
+              <strong>full-text indexes:</strong> Lucene/Solr, ElasticSearch. 
+              <strong>Networking:</strong> Networking and Internet protocols. Wireless Networking and mobility. Inter/Intra-domain routing. Network security. CCNA cer-
+              tification.
+          </div>
+          <!-- <div class="subheading mb-3">Workflow</div>
           <ul class="fa-ul mb-0">
             <li>
               <i class="fa-li fas fa-check"></i>
@@ -270,7 +282,7 @@
             <li>
               <i class="fa-li fas fa-check"></i>
               Agile Development &amp; Scrum</li>
-          </ul>
+          </ul> -->
         </div>
       </section>
 
