--- a/index.html
+++ b/index.html
@@ -119,7 +119,18 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Research Associate</h3>
               <div class="subheading mb-3">The Knowledge Media Institute (KMi), The Open University, Milton Keynes, UK</div>
-              <p><i class="fa-li fa fa-spinner"></i> Loading... :)</p>
+              <!-- <p><i class="fa-li fa fa-spinner"></i> Loading... :)</p> -->
+              <ul>
+                <li>
+                  Scholarly Knowledge Modelling, Mining and sense Making (SKM3) team
+                  <ul>
+                    <li>Development of the SKM3 infrastructure for scholarly knowledge analytics</li>
+                    <li>Exploration and integration of different and heterogeneous scholarly datasets</li>
+                    <li>Research focus on societal impact of academic research</li>
+                  </ul>
+                </li>
+                <li>Technical support and cunsultancy for the project City Labs</li>
+              </ul>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">February 2017 - Present</span>
@@ -130,7 +141,15 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Research Assistant</h3>
               <div class="subheading mb-3">Institute of Information Science and Technologies (ISTI), The National Research Council of Italy (CNR), Pisa, Italy</div>
-              <p><i class="fa-li fa fa-spinner"></i> Loading... :)</p>
+              <ul>
+                <li>OpenAIRE2020 task leader: data flows and dynamics monitoring services</li>
+                <li>EAGLE technical manager: aggregation workflows and data quality</li>
+                <li>Collaboration in the projects S&amp;TDL, OpenAIRE2020, OpenAIREplus, HOPE, EFG and iCORDI</li>
+                <li>Realisation of service-oriented architectures (SOA) for data integration infrastructures</li>
+                <li>Development of D-NET software toolkit</li>
+                <li>Design of distributed systems for collaborative research environments</li>
+                <li>Data modelling, data management, curation and publishing</li>
+              </ul>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">November 2012 - January 2017</span>
@@ -141,7 +160,11 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Research Assistant</h3>
               <div class="subheading mb-3">IMDEA Networks, Madrid, Spain</div>
-              <p><i class="fa-li fa fa-spinner"></i> Loading... :)</p>
+              <ul>
+                <li>Optimisation and performance evaluation of 802.11 MAC protocols</li>
+                <li>Collaboration within the framework of the EU FP7 research project FLAVIA</li>
+                <li>Research in Social Networks and predictions based on social media</li>
+              </ul>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">September 2010 - September 2011</span>
@@ -152,7 +175,10 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Research Assistant</h3>
               <div class="subheading mb-3">The Mærsk Mc-Kinney Møller Institute,\\The University of Southern Denmark, Odense, Denmark</div>
-              <p><i class="fa-li fa fa-spinner"></i> Loading... :)</p>
+              <ul>
+                <li>Research in dynamic updating of Java software</li>
+                <li>Realisation of a case study for Javeleon, a Dynamic Software Updating System developed by a research group in the institute</li>
+              </ul>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">August 2009 - April 2010</span>
@@ -171,7 +197,8 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Ph.D. in Information Engineering</h3>
               <div class="subheading mb-3">University of Pisa, Italy</div>
-              <!-- <div>Computer Science - Web Development Track</div> -->
+              <p>Thesis: “Data flow quality monitoring in data infrastructures”<br/>
+              Supervisors: Dr. Paolo Manghi (ISTI-CNR), Prof. Marco Avvenuti (University of Pisa)</p>
               <!-- <p>GPA: 3.23</p> -->
             </div>
             <div class="resume-date text-md-right">
@@ -183,7 +210,12 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">M.Sc. in Telematic Engineering</h3>
               <div class="subheading mb-3">University Carlos III of Madrid, Spain</div>
-              <!-- <p>GPA: 3.56</p> -->
+              <p>Thesis: “Control Theoretic Optimization of 802.11 WLANs: Implementation
+                  and Experimental Evaluation”<br/>
+                  Supervisors: Prof. Albert Banchs Roca (IMDEA Networks &amp; UC3M), Prof.
+                  Vincenzo Mancuso (IMDEA Networks)
+                  <a href="http://goo.gl/mBnvO"><i class="fas fa-external-link-alt"></i></a>
+              </p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">2010 - 2011</span>
@@ -194,7 +226,10 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">M.Sc. in Computer Engineering</h3>
               <div class="subheading mb-3">University of Pisa, Italy</div>
-              <!-- <p>GPA: 3.56</p> -->
+              <p>Thesis: “Stepwise Evolution of Java Applications using Dynamic Updates”<br/>
+                  Supervisor: Prof. Bo Nørregaard Jørgensen (Syddansk Universitet), Prof.
+                  Marco Avvenuti (University of Pisa)
+              </p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">2007 - 2010</span>
@@ -205,7 +240,10 @@
             <div class="resume-content mr-auto">
               <h3 class="mb-0">B.Sc. in Computer Engineering</h3>
               <div class="subheading mb-3">University of Pisa, Italy</div>
-              <!-- <p>GPA: 3.56</p> -->
+              <p>Thesis: “Design and realisation of a software module for PLC/PAC remote
+                  controlling”<br/>
+                  Supervisor: Prof. Aldo Balestrino (University of Pisa)
+              </p>
             </div>
             <div class="resume-date text-md-right">
               <span class="text-primary">2003 - 2007</span>
