--- a/index.html
+++ b/index.html
@@ -75,9 +75,9 @@
           <a href="mailto:andrea.mannocci@open.ac.uk">andrea.mannocci@open.ac.uk</a>
         </div>
         <p class="mb-5">
-          <i class="fa-li fa fa-spinner"></i> Loading... :)</p>
+          <i class="fas fa-spinner"></i> Loading... :)</p>
         <p class="mb-5">
-          <i class="fa-li fa fa-spinner"></i> The full CV can be found
+          The full CV can be found
           <a target="_blank" href="https://drive.google.com/file/d/1SzMqRhUQwX7Mvd4ab0xTPIw4EqPbXpiM/view?usp=sharing">here</a>
         </p>
         <ul class="list-inline list-social-icons mb-0">
