--- a/index.html
+++ b/index.html
@@ -114,18 +114,10 @@
             </a>
           </li>
           <li class="list-inline-item">
-            <a target="_blank" href="https://www.facebook.com/andremann">
-              <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
-              </span>
-            </a>
-          </li>
-          <li class="list-inline-item">
             <a target="_blank" href="https://www.flickr.com/photos/andremann">
               <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fab fa-flickr fa-stack-1x fa-inverse"></i>
+                <i class="fas fa-camera-retro fa-stack-1x fa-inverse"></i>
               </span>
             </a>
           </li>
