added nutshell description

--- a/index.html
+++ b/index.html
@@ -74,10 +74,14 @@
           <br/>
           <a href="mailto:andrea.mannocci@open.ac.uk">andrea.mannocci@open.ac.uk</a>
         </div>
+        <p>
+          <span class="subheading">In a nutshell: </span>Data science, societal impact of data analysis, science of science, data infrastructures,
+          data modelling, data interlinking and mining.
+        </p>
         <p class="mb-5">
           <i class="fas fa-spinner"></i> Loading... :)</p>
         <p class="mb-5">
-          The full CV can be found
+          <i class="far fa-hand-point-right"></i> The full CV can be found
           <a target="_blank" href="https://drive.google.com/file/d/1SzMqRhUQwX7Mvd4ab0xTPIw4EqPbXpiM/view?usp=sharing">here</a>
         </p>
         <ul class="list-inline list-social-icons mb-0">
@@ -144,7 +148,9 @@
                   <li>Research focus on societal impact of academic research</li>
                 </ul>
               </li>
-              <li>Technical support and cunsultancy for the project <a target="_blank" href="http://citylabs.org.uk">CityLabs</a></li>
+              <li>Technical support and cunsultancy for the project
+                <a target="_blank" href="http://citylabs.org.uk">CityLabs</a>
+              </li>
             </ul>
           </div>
           <div class="resume-date text-md-right">
@@ -220,8 +226,11 @@
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Ph.D. in Information Engineering</h3>
             <div class="subheading mb-3">University of Pisa, Italy</div>
-            <p>Thesis: “Data flow quality monitoring in data infrastructures” <a href="https://etd.adm.unipi.it/theses/available/etd-12232016-151401/unrestricted/PhD_Thesis.pdf
-              "><i class="fas fa-external-link-alt"></i></a>
+            <p>Thesis: “Data flow quality monitoring in data infrastructures”
+              <a href="https://etd.adm.unipi.it/theses/available/etd-12232016-151401/unrestricted/PhD_Thesis.pdf
+              ">
+                <i class="fas fa-external-link-alt"></i>
+              </a>
               <br/> Supervisors: Dr. Paolo Manghi (ISTI-CNR), Prof. Marco Avvenuti (University of Pisa)</p>
             <!-- <p>GPA: 3.23</p> -->
           </div>
@@ -234,7 +243,10 @@
           <div class="resume-content mr-auto">
             <h3 class="mb-0">M.Sc. in Telematic Engineering</h3>
             <div class="subheading mb-3">University Carlos III of Madrid, Spain</div>
-            <p>Thesis: “Control Theoretic Optimization of 802.11 WLANs: Implementation and Experimental Evaluation” <a href="http://eprints.networks.imdea.org/277/1/A.Mannocci-MsC%20Thesis-July%202011.pdf"><i class="fas fa-external-link-alt"></i></a>
+            <p>Thesis: “Control Theoretic Optimization of 802.11 WLANs: Implementation and Experimental Evaluation”
+              <a href="http://eprints.networks.imdea.org/277/1/A.Mannocci-MsC%20Thesis-July%202011.pdf">
+                <i class="fas fa-external-link-alt"></i>
+              </a>
               <br/> Supervisors: Prof. Albert Banchs Roca (IMDEA Networks &amp; UC3M), Prof. Vincenzo Mancuso (IMDEA Networks)
             </p>
           </div>
