--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
           <a href="mailto:andrea.mannocci@open.ac.uk">andrea.mannocci@open.ac.uk</a>
         </div>
         <p>
-          <span class="subheading">In a nutshell: </span>Data science, societal impact of data analysis, science of science, data infrastructures,
-          data modelling, data interlinking and mining.
+          <span class="subheading">In a nutshell: </span>Data science, societal impact of data analysis, science of science, scholarly communication
+          and scholarly knowledge mining, (research) data infrastructures.
         </p>
         <p class="mb-5">
           <i class="fas fa-spinner"></i> Loading... :)</p>
@@ -90,6 +90,14 @@
               <span class="fa-stack fa-lg">
                 <i class="fa fa-circle fa-stack-2x"></i>
                 <i class="fas fa-file-alt fa-stack-1x fa-inverse"></i>
+              </span>
+            </a>
+          </li>
+          <li class="list-inline-item">
+            <a target="_blank" href="https://scholar.google.co.uk/citations?user=1DBVPZUAAAAJ&hl=en">
+              <span class="fa-stack fa-lg">
+                <i class="fa fa-circle fa-stack-2x"></i>
+                <i class="fas fa-graduation-cap fa-stack-1x fa-inverse"></i>
               </span>
             </a>
           </li>
@@ -356,6 +364,10 @@
           <li>
             <i class="fa-li fas fa-trophy text-warning"></i>
             Best Paper Award at The Web Conference 2018 (SAVE-SD workshop)
+          </li>
+          <li>
+            <i class="fa-li fas fa-graduation-cap text-normal"></i>
+            $20,000 Azure4research grant (Microsoft Research), 2018
           </li>
           <li>
             <i class="fa-li fas fa-graduation-cap text-normal"></i>
