--- a/index.html
+++ b/index.html
@@ -326,24 +326,24 @@
 
         <div>
           <strong>Programming skills:</strong> Java, Python, JavaScript, C/C++, Bash scripting. Proficiency with Apache Maven and
-          VCSs (SVN &amp; GIT). Advanced knowledge of VS code, IntelliJ, Eclipse, NetBeans IDEs.
-          <strong>Data science tools:</strong> Python notebook, pandas, pyplot, plotly, scikit-learn, &amp; platforms: proficiency
-          with Spring framework (Core, MVC, Security), JPA and Hibernate.
-          <strong>Web development &amp; JS frameworks:</strong> JQuery, Boot- strap, AngularJS, CSS, Django, JSP.
-          <strong>Application monitoring:</strong> ELK stack (Logstash, Elas- ticSearch, Kibana), Prometheus.
+          VCSs (SVN &amp; GIT). Advanced knowledge of Visual Studio Code, IntelliJ, Eclipse, NetBeans IDEs.
+          <strong>Data science frameworks &amp; tools:</strong> Python notebook, pandas, pyplot, plotly, scikit-learn, nltk, hadoop, spark, map reduce.
+          <strong>Java frameworks:</strong> proficiency with Spring framework (Core, MVC, Security), JPA and Hibernate.
+          <strong>Web development &amp; JS frameworks:</strong> JQuery, Bootstrap, AngularJS, CSS, Django, JSP.
+          <strong>Application monitoring:</strong> ELK stack (Logstash, ElasticSearch, Kibana), Prometheus.
           <strong>Markup languages:</strong> HTML, XHTML, XML (XML Schema, XPath, XQuery, XSL), LaTeX.
-          <strong>Metadata formats:</strong> XML, DublinCore, EpiDoc, RDF.
           <strong>Web services and web applications:</strong> SOAP, WSDL, WADL, JAX-WS, REST, JAX-RS, Apache CXF, Jersey, Apache
           HTTP server and Apache Tomcat, Jetty, ServiceMix, OSGi;
           <strong>Data management systems:</strong> proficiency with both SQL and noSQL paradigms (transactional and non-transactional
           approaches); configuration and optimisation of databases;
           <strong>relational databases:</strong> PosgreSQL, MySQL, SQLite;
-          <strong>noSQL databases:</strong> eXist, MongoDB, HBase;
+          <strong>document stores:</strong> eXist, MongoDB;
+          <strong>triple stores:</strong> GraphDB, BlazeGraph;
           <strong>k-v stores:</strong> Redis, Voldemort, EhCache;
           <strong>time series databases:</strong> InfluxDB, Druid;
           <strong>full-text indexes:</strong> Lucene/Solr, ElasticSearch.
           <strong>Networking:</strong> Networking and Internet protocols. Wireless Networking and mobility. Inter/Intra-domain routing.
-          Network security. CCNA cer- tification.
+          Network security. CCNA certification.
         </div>
       </div>
     </section>
