--- a/index.html
+++ b/index.html
@@ -327,7 +327,8 @@
         <div>
           <strong>Programming skills:</strong> Java, Python, JavaScript, C/C++, Bash scripting. Proficiency with Apache Maven and
           VCSs (SVN &amp; GIT). Advanced knowledge of Visual Studio Code, IntelliJ, Eclipse, NetBeans IDEs.
-          <strong>Data science frameworks &amp; tools:</strong> Python notebook, pandas, pyplot, plotly, scikit-learn, nltk, hadoop, spark, map reduce.
+          <strong>Data science frameworks &amp; tools:</strong> Python notebook, pandas, pyplot, plotly, scikit-learn, nltk, hadoop,
+          spark, map reduce.
           <strong>Java frameworks:</strong> proficiency with Spring framework (Core, MVC, Security), JPA and Hibernate.
           <strong>Web development &amp; JS frameworks:</strong> JQuery, Bootstrap, AngularJS, CSS, Django, JSP.
           <strong>Application monitoring:</strong> ELK stack (Logstash, ElasticSearch, Kibana), Prometheus.
