--- a/index.html
+++ b/index.html
@@ -79,10 +79,10 @@
           and scholarly knowledge mining, (research) data infrastructures.
         </p>
         <p class="mb-5">
-          <i class="fas fa-spinner"></i> Loading... :)</p>
-        <p class="mb-5">
+          <!-- <i class="fas fa-spinner"></i> Loading... :)</p> -->
           <i class="far fa-hand-point-right"></i> The full CV can be found
-          <a target="_blank" href="https://drive.google.com/file/d/1SzMqRhUQwX7Mvd4ab0xTPIw4EqPbXpiM/view?usp=sharing">here</a>
+          <a target="_blank" href="https://drive.google.com/file/d/1SzMqRhUQwX7Mvd4ab0xTPIw4EqPbXpiM/view?usp=sharing">here</a>.
+        <p class="mb-5">
         </p>
         <ul class="list-inline list-social-icons mb-0">
           <li class="list-inline-item">
