updated kmi info

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
         <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/myself.jpg" alt="">
       </span>
     </a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-      aria-expanded="false" aria-label="Toggle navigation">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+      aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
@@ -70,70 +70,72 @@
         <h1 class="mb-0">Andrea
           <span class="text-primary">Mannocci</span>
         </h1>
-        <div class="subheading mb-5">Knowledge Media Institute, The Open University, Walton Hall, Kents Hill, MK7 6AA Milton Keynes, UK
-          <br/>
+        <div class="subheading mb-5">Knowledge Media Institute, The Open University, Walton Hall, Kents Hill, MK7 6AA
+          Milton Keynes, UK
+          <br />
           <a href="mailto:andrea.mannocci@open.ac.uk">andrea.mannocci@open.ac.uk</a>
         </div>
         <p>
-          <span class="subheading">In a nutshell: </span>Data science, societal impact of data analysis, science of science, scholarly communication
+          <span class="subheading">In a nutshell: </span>Data science, societal impact of data analysis, science of
+          science, scholarly communication
           and scholarly knowledge mining, (research) data infrastructures.
         </p>
         <p class="mb-5">
           <!-- <i class="fas fa-spinner"></i> Loading... :)</p> -->
           <i class="far fa-hand-point-right"></i> The full CV can be found
           <a target="_blank" href="https://drive.google.com/file/d/1SzMqRhUQwX7Mvd4ab0xTPIw4EqPbXpiM/view?usp=sharing">here</a>.
-        <p class="mb-5">
-        </p>
-        <ul class="list-inline list-social-icons mb-0">
-          <li class="list-inline-item">
-            <a target="_blank" href="https://drive.google.com/file/d/1SzMqRhUQwX7Mvd4ab0xTPIw4EqPbXpiM/view?usp=sharing">
-              <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fas fa-file-alt fa-stack-1x fa-inverse"></i>
-              </span>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a target="_blank" href="https://scholar.google.co.uk/citations?user=1DBVPZUAAAAJ&hl=en">
-              <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fas fa-graduation-cap fa-stack-1x fa-inverse"></i>
-              </span>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a target="_blank" href="https://www.linkedin.com/in/andrea-mannocci">
-              <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fab fa-linkedin-in fa-stack-1x fa-inverse"></i>
-              </span>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a target="_blank" href="https://github.com/andremann">
-              <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fab fa-github fa-stack-1x fa-inverse"></i>
-              </span>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a target="_blank" href="https://twitter.com/andremanno">
-              <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
-              </span>
-            </a>
-          </li>
-          <li class="list-inline-item">
-            <a target="_blank" href="https://www.flickr.com/photos/andremann">
-              <span class="fa-stack fa-lg">
-                <i class="fa fa-circle fa-stack-2x"></i>
-                <i class="fas fa-camera-retro fa-stack-1x fa-inverse"></i>
-              </span>
-            </a>
-          </li>
-        </ul>
+          <p class="mb-5">
+          </p>
+          <ul class="list-inline list-social-icons mb-0">
+            <li class="list-inline-item">
+              <a target="_blank" href="https://drive.google.com/file/d/1SzMqRhUQwX7Mvd4ab0xTPIw4EqPbXpiM/view?usp=sharing">
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fas fa-file-alt fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a target="_blank" href="https://scholar.google.co.uk/citations?user=1DBVPZUAAAAJ&hl=en">
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fas fa-graduation-cap fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a target="_blank" href="https://www.linkedin.com/in/andrea-mannocci">
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fab fa-linkedin-in fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a target="_blank" href="https://github.com/andremann">
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fab fa-github fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a target="_blank" href="https://twitter.com/andremanno">
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+            </li>
+            <li class="list-inline-item">
+              <a target="_blank" href="https://www.flickr.com/photos/andremann">
+                <span class="fa-stack fa-lg">
+                  <i class="fa fa-circle fa-stack-2x"></i>
+                  <i class="fas fa-camera-retro fa-stack-1x fa-inverse"></i>
+                </span>
+              </a>
+            </li>
+          </ul>
       </div>
     </section>
 
@@ -151,13 +153,27 @@
                 Scholarly Knowledge Modelling, Mining and sense Making (
                 <a target="_blank" href="http://skm.kmi.open.ac.uk">SKM3</a>) team
                 <ul>
-                  <li>Development of the SKM3 infrastructure for scholarly knowledge analytics</li>
-                  <li>Exploration and integration of different and heterogeneous scholarly datasets</li>
-                  <li>Research focus on societal impact of academic research</li>
+                  <li> Research focusing on geopolitical and socioeconomic impact of academic research; analysis of
+                    scholarly data in the broader context.
+                  <li> Analysis of trends and dynamics within conference venues. Analysis of authors affiliations and
+                    their distribution on the research landscape.</li>
+                  <li> Analysis of the evolution and forecast of technologies diffusion across different disciplines
+                    and research areas.</li>
+                  <li> Creation and maintenance of the Computer Science Ontology (processed automatically from
+                    scientific literature) and automatic classification of papers.</li>
+                  <li> Re-engineerization of the SKM\textsuperscript{3} infrastructure for scholarly knowledge
+                    analytics: moving from a single dataset hosted on a relational database to a scalable aggregation
+                    and analytics infrastructure availing of the DataHub cluster (Hadoop-based) owned by the
+                    university.</li>
+                  <li> Exploration of the major scholarly datasets and sources of scholarly data such as CrossRef,
+                    Microsoft Academic, Dimensions, Scopus, SciGraph, SemanticScholar and DBLP.</li>
+                  <li> Management of the SKM\textsuperscript{3} Azure infrastructure for a collaboration with Microsoft
+                    Academics.</li>
                 </ul>
               </li>
               <li>Technical support and cunsultancy for the project
-                <a target="_blank" href="http://citylabs.org.uk">CityLabs</a>
+                <a target="_blank" href="http://citylabs.org.uk">CityLabs</a>. Consultancies delivered to several local
+                SMEs such as Medietas, UK postings and Design Buildings Ltd.
               </li>
             </ul>
           </div>
@@ -169,20 +185,24 @@
         <div class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Research Assistant</h3>
-            <div class="subheading mb-3">Institute of Information Science and Technologies (ISTI), The National Research Council of Italy (CNR), Pisa,
+            <div class="subheading mb-3">Institute of Information Science and Technologies (ISTI), The National
+              Research Council of Italy (CNR), Pisa,
               Italy
             </div>
             <ul>
               <li>
-                <a target="_blank" href="https://www.openaire.eu">OpenAIRE2020</a> task leader: data flows and dynamics monitoring services</li>
+                <a target="_blank" href="https://www.openaire.eu">OpenAIRE2020</a> task leader: data flows and dynamics
+                monitoring services</li>
               <li>
-                <a target="_blank" href="https://www.eagle-network.eu">EAGLE</a> technical manager: aggregation workflows and data quality</li>
+                <a target="_blank" href="https://www.eagle-network.eu">EAGLE</a> technical manager: aggregation
+                workflows and data quality</li>
               <li>Collaboration in the projects S&amp;TDL, OpenAIRE2020, OpenAIREplus,
                 <a target="_blank" href="http://www.peoplesheritage.eu/content/about_hope.htm">HOPE</a>,
                 <a target="_blank" href="http://efgproject.eu/index.php">EFG</a> and iCORDI</li>
               <li>Realisation of service-oriented architectures (SOA) for data integration infrastructures</li>
               <li>Development of
-                <a target="_blank" href="http://www.d-net.research-infrastructures.eu/node/1">D-NET</a> software toolkit</li>
+                <a target="_blank" href="http://www.d-net.research-infrastructures.eu/node/1">D-NET</a> software
+                toolkit</li>
               <li>Design of distributed systems for collaborative research environments</li>
               <li>Data modelling, data management, curation and publishing</li>
             </ul>
@@ -210,10 +230,12 @@
         <div class="resume-item d-flex flex-column flex-md-row">
           <div class="resume-content mr-auto">
             <h3 class="mb-0">Research Assistant</h3>
-            <div class="subheading mb-3">The Mærsk Mc-Kinney Møller Institute,\\The University of Southern Denmark, Odense, Denmark</div>
+            <div class="subheading mb-3">The Mærsk Mc-Kinney Møller Institute,\\The University of Southern Denmark,
+              Odense, Denmark</div>
             <ul>
               <li>Research in dynamic updating of Java software</li>
-              <li>Realisation of a case study for Javeleon, a Dynamic Software Updating System developed by a research group
+              <li>Realisation of a case study for Javeleon, a Dynamic Software Updating System developed by a research
+                group
                 in the institute</li>
             </ul>
           </div>
@@ -239,7 +261,7 @@
               ">
                 <i class="fas fa-external-link-alt"></i>
               </a>
-              <br/> Supervisors: Dr. Paolo Manghi (ISTI-CNR), Prof. Marco Avvenuti (University of Pisa)</p>
+              <br /> Supervisors: Dr. Paolo Manghi (ISTI-CNR), Prof. Marco Avvenuti (University of Pisa)</p>
             <!-- <p>GPA: 3.23</p> -->
           </div>
           <div class="resume-date text-md-right">
@@ -255,7 +277,8 @@
               <a href="http://eprints.networks.imdea.org/277/1/A.Mannocci-MsC%20Thesis-July%202011.pdf">
                 <i class="fas fa-external-link-alt"></i>
               </a>
-              <br/> Supervisors: Prof. Albert Banchs Roca (IMDEA Networks &amp; UC3M), Prof. Vincenzo Mancuso (IMDEA Networks)
+              <br /> Supervisors: Prof. Albert Banchs Roca (IMDEA Networks &amp; UC3M), Prof. Vincenzo Mancuso (IMDEA
+              Networks)
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -268,7 +291,8 @@
             <h3 class="mb-0">M.Sc. in Computer Engineering</h3>
             <div class="subheading mb-3">University of Pisa, Italy</div>
             <p>Thesis: “Stepwise Evolution of Java Applications using Dynamic Updates”
-              <br/> Supervisor: Prof. Bo Nørregaard Jørgensen (Syddansk Universitet), Prof. Marco Avvenuti (University of Pisa)
+              <br /> Supervisor: Prof. Bo Nørregaard Jørgensen (Syddansk Universitet), Prof. Marco Avvenuti (University
+              of Pisa)
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -281,7 +305,7 @@
             <h3 class="mb-0">B.Sc. in Computer Engineering</h3>
             <div class="subheading mb-3">University of Pisa, Italy</div>
             <p>Thesis: “Design and realisation of a software module for PLC/PAC remote controlling”
-              <br/> Supervisor: Prof. Aldo Balestrino (University of Pisa)
+              <br /> Supervisor: Prof. Aldo Balestrino (University of Pisa)
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -325,17 +349,21 @@
         </ul>
 
         <div>
-          <strong>Programming skills:</strong> Java, Python, JavaScript, C/C++, Bash scripting. Proficiency with Apache Maven and
+          <strong>Programming skills:</strong> Java, Python, JavaScript, C/C++, Bash scripting. Proficiency with Apache
+          Maven and
           VCSs (SVN &amp; GIT). Advanced knowledge of Visual Studio Code, IntelliJ, Eclipse, NetBeans IDEs.
-          <strong>Data science frameworks &amp; tools:</strong> Python notebook, pandas, pyplot, plotly, scikit-learn, nltk, hadoop,
+          <strong>Data science frameworks &amp; tools:</strong> Python notebook, pandas, pyplot, plotly, scikit-learn,
+          nltk, hadoop,
           spark, map reduce.
           <strong>Java frameworks:</strong> proficiency with Spring framework (Core, MVC, Security), JPA and Hibernate.
           <strong>Web development &amp; JS frameworks:</strong> JQuery, Bootstrap, AngularJS, CSS, Django, JSP.
           <strong>Application monitoring:</strong> ELK stack (Logstash, ElasticSearch, Kibana), Prometheus.
           <strong>Markup languages:</strong> HTML, XHTML, XML (XML Schema, XPath, XQuery, XSL), LaTeX.
-          <strong>Web services and web applications:</strong> SOAP, WSDL, WADL, JAX-WS, REST, JAX-RS, Apache CXF, Jersey, Apache
+          <strong>Web services and web applications:</strong> SOAP, WSDL, WADL, JAX-WS, REST, JAX-RS, Apache CXF,
+          Jersey, Apache
           HTTP server and Apache Tomcat, Jetty, ServiceMix, OSGi;
-          <strong>Data management systems:</strong> proficiency with both SQL and noSQL paradigms (transactional and non-transactional
+          <strong>Data management systems:</strong> proficiency with both SQL and noSQL paradigms (transactional and
+          non-transactional
           approaches); configuration and optimisation of databases;
           <strong>relational databases:</strong> PosgreSQL, MySQL, SQLite;
           <strong>document stores:</strong> eXist, MongoDB;
@@ -343,7 +371,8 @@
           <strong>k-v stores:</strong> Redis, Voldemort, EhCache;
           <strong>time series databases:</strong> InfluxDB, Druid;
           <strong>full-text indexes:</strong> Lucene/Solr, ElasticSearch.
-          <strong>Networking:</strong> Networking and Internet protocols. Wireless Networking and mobility. Inter/Intra-domain routing.
+          <strong>Networking:</strong> Networking and Internet protocols. Wireless Networking and mobility.
+          Inter/Intra-domain routing.
           Network security. CCNA certification.
         </div>
       </div>
@@ -352,9 +381,11 @@
     <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="interests">
       <div class="my-auto">
         <h2 class="mb-5">Interests</h2>
-        <p>Love inline skating and freestyle slalom (instructor license), windsurfing, skiing, travelling, playing electric
+        <p>Love inline skating and freestyle slalom (instructor license), windsurfing, skiing, travelling, playing
+          electric
           guitar, folding origami,
-          <a target="_blank" href="https://www.flickr.com/photos/andremann">shooting pictures</a>, reading Scandinavian crime novels and cooking.</p>
+          <a target="_blank" href="https://www.flickr.com/photos/andremann">shooting pictures</a>, reading Scandinavian
+          crime novels and cooking.</p>
       </div>
     </section>
 
