--- a/index.html
+++ b/index.html
@@ -349,31 +349,23 @@
         </ul>
 
         <div>
-          <strong>Programming skills:</strong> Java, Python, JavaScript, C/C++, Bash scripting. Proficiency with Apache
-          Maven and
-          VCSs (SVN &amp; GIT). Advanced knowledge of Visual Studio Code, IntelliJ, Eclipse, NetBeans IDEs.
-          <strong>Data science frameworks &amp; tools:</strong> Python notebook, pandas, pyplot, plotly, scikit-learn,
-          nltk, hadoop,
-          spark, map reduce.
-          <strong>Java frameworks:</strong> proficiency with Spring framework (Core, MVC, Security), JPA and Hibernate.
-          <strong>Web development &amp; JS frameworks:</strong> JQuery, Bootstrap, AngularJS, CSS, Django, JSP.
-          <strong>Application monitoring:</strong> ELK stack (Logstash, ElasticSearch, Kibana), Prometheus.
-          <strong>Markup languages:</strong> HTML, XHTML, XML (XML Schema, XPath, XQuery, XSL), LaTeX.
-          <strong>Web services and web applications:</strong> SOAP, WSDL, WADL, JAX-WS, REST, JAX-RS, Apache CXF,
-          Jersey, Apache
-          HTTP server and Apache Tomcat, Jetty, ServiceMix, OSGi;
-          <strong>Data management systems:</strong> proficiency with both SQL and noSQL paradigms (transactional and
-          non-transactional
-          approaches); configuration and optimisation of databases;
-          <strong>relational databases:</strong> PosgreSQL, MySQL, SQLite;
-          <strong>document stores:</strong> eXist, MongoDB;
-          <strong>triple stores:</strong> GraphDB, BlazeGraph;
-          <strong>k-v stores:</strong> Redis, Voldemort, EhCache;
-          <strong>time series databases:</strong> InfluxDB, Druid;
-          <strong>full-text indexes:</strong> Lucene/Solr, ElasticSearch.
-          <strong>Networking:</strong> Networking and Internet protocols. Wireless Networking and mobility.
-          Inter/Intra-domain routing.
-          Network security. CCNA certification.
+            <strong>Programming skills:</strong> Java, Python, JavaScript, C/C++, Bash scripting. Proficiency with Apache Maven and VCSs (SVN \& GIT). Advanced knowledge of Visual Studio Code, IntelliJ, Eclipse, NetBeans IDEs.
+            <strong>Data science frameworks \& tools:</strong> Python notebooks, Pandas; <strong>big data</strong>: Hadoop ecosystem, Hive, Spark, Map Reduce; <strong>complex networks</strong>: NetworkX, iGraph; <strong>machine learning</strong>: scikit-learn, Tensorflow/Keras; NLP: Gensim, NLTK; <strong>visualisation</strong>: pyplot, plotly.
+            <strong>Java frameworks:</strong> proficiency with Spring framework (Core, MVC, Security), JPA and Hibernate.
+            <strong>Web development \& JS frameworks:</strong> JQuery, Bootstrap, AngularJS, CSS, Django, JSP.
+            <strong>Application monitoring:</strong> ELK stack (Logstash, ElasticSearch, Kibana), Prometheus.
+            <strong>Markup languages:</strong> HTML, XHTML, XML (XML Schema, XPath, XQuery, XSL), LaTeX.
+            <strong>Web services and web applications:</strong> SOAP, WSDL, WADL, JAX-WS, REST, JAX-RS, Apache CXF, Jersey, Apache
+            HTTP server and Apache Tomcat, Jetty, ServiceMix, OSGi;
+            <strong>Data management systems:</strong> proficiency with both SQL and noSQL paradigms; configuration and optimisation of databases;
+            <strong>relational databases:</strong> PosgreSQL, MySQL, SQLite;
+            <strong>document stores:</strong> eXist, MongoDB;
+            <strong>triple stores:</strong> GraphDB, BlazeGraph;
+            <strong>k-v stores:</strong> Redis, Voldemort, EhCache;
+            <strong>time series databases:</strong> InfluxDB, Druid;
+            <strong>full-text indexes:</strong> Lucene/Solr, ElasticSearch.
+            <strong>Networking:</strong> Networking and Internet protocols. Wireless Networking and mobility. Inter/Intra-domain routing.
+            Network security. Cisco CCNA certification.
         </div>
       </div>
     </section>
